# esp32-freertos-sensor-hub

./: CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.defaults
diagrams/: architecture.md
docs/: roadmap.md
include/tasks/: HealthMonitorTask.hpp  LoggerTask.hpp  SensorTask.hpp
main/: CMakeLists.txt  app_main.cpp
src/tasks/: HealthMonitorTask.cpp  LoggerTask.cpp  SensorTask.cpp
